fix(popover-surface): improve contrast and readability

--- a/src/components/popover-surface/popover-surface.scss
+++ b/src/components/popover-surface/popover-surface.scss
@@ -31,7 +31,7 @@
         left: 0;
         z-index: z-index.$popover-before;
 
-        opacity: 0.75;
+        opacity: 0.9;
 
         border-radius: var(--popover-border-radius, functions.pxToRem(12));
         background-color: var(
